tests/ui/pattern/usefulness/consts-opaque.stderr
error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/consts-opaque.rs:96:9
   |
LL |         QUUX => {}
   |         ^^^^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/consts-opaque.rs:97:9
   |
LL |         QUUX => {}
   |         ^^^^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/consts-opaque.rs:106:9
   |
LL |         WRAPQUUX => {}
   |         ^^^^^^^^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/consts-opaque.rs:107:9
   |
LL |         WRAPQUUX => {}
   |         ^^^^^^^^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/consts-opaque.rs:113:9
   |
LL |         WRAPQUUX => {}
   |         ^^^^^^^^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/consts-opaque.rs:121:9
   |
LL |         WRAPQUUX => {}
   |         ^^^^^^^^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/consts-opaque.rs:132:9
   |
LL |         WHOKNOWSQUUX => {}
   |         ^^^^^^^^^^^^

error: function pointers and raw pointers not derived from integers in patterns behave unpredictably and should not be relied upon. See https://github.com/rust-lang/rust/issues/70861 for details.
  --> $DIR/consts-opaque.rs:134:9
   |
LL |         WHOKNOWSQUUX => {}
   |         ^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/consts-opaque.rs:48:9
   |
LL |         Bar => {}
   |         --- matches any value
LL |         BAR => {}
   |         ^^^ unreachable pattern
   |
note: the lint level is defined here
  --> $DIR/consts-opaque.rs:6:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/consts-opaque.rs:50:9
   |
LL |         Bar => {}
   |         --- matches any value
...
LL |         _ => {}
   |         ^ unreachable pattern

error: unreachable pattern
  --> $DIR/consts-opaque.rs:56:9
   |
LL |         BAR => {}
   |         --- matches any value
LL |         Bar => {}
   |         ^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/consts-opaque.rs:58:9
   |
LL |         BAR => {}
   |         --- matches any value
...
LL |         _ => {}
   |         ^ unreachable pattern

error: unreachable pattern
  --> $DIR/consts-opaque.rs:64:9
   |
LL |         BAR => {}
   |         --- matches any value
LL |         BAR => {} // should not be emitting unreachable warning
   |         ^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/consts-opaque.rs:66:9
   |
LL |         BAR => {}
   |         --- matches any value
...
LL |         _ => {} // should not be emitting unreachable warning
   |         ^ unreachable pattern

error: unreachable pattern
  --> $DIR/consts-opaque.rs:72:9
   |
LL |         Baz::Baz1 => {} // should not be emitting unreachable warning
   |         ^^^^^^^^^

error: unreachable pattern
  --> $DIR/consts-opaque.rs:79:9
   |
LL |         BAZ => {}
   |         ^^^

error: unreachable pattern
  --> $DIR/consts-opaque.rs:87:9
   |
LL |         _ => {} // should not be emitting unreachable warning
   |         ^

error: aborting due to 17 previous errors

